update reset styles for scroll behaviour

--- a/css/reset.css
+++ b/css/reset.css
@@ -60,3 +60,10 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+/* 10. Reset scroll behavior */
+@media (prefers-reduced-motion: no-preference) {
+  * {
+    scroll-behavior: smooth;
+  }
+}
