--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,98 @@
 @import url("./reset.css");
+
+body {
+  min-width: 290px;
+  color: #4d4e53;
+  background-color: #ffffff;
+  font-family: 'Open Sans', Arial, sans-serif;
+  line-height: 1.5;
+}
+
+header {
+  color: black;
+}
+
+/* Navigation Menu */
+
+#navbar {
+  height: 100%;
+  width: 300px;
+  min-width: 290px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  border-right-style: solid;
+  border-right-color: rgba(0, 22, 22, 0.4);;
+}
+
+#navbar header {
+  text-align: center;
+  padding: 10px 10px  12px 10px ;
+  font-size: 1.8em;
+  font-weight: thin;
+}
+
+#navbar ul {
+  list-style: none;
+}
+
+#navbar li {
+  padding: 10px 0 10px 32px;
+  font-size: 1em;
+  border-top: 1px solid #4d4e53;
+}
+
+#navbar li a {
+  text-decoration: none;
+  color: #4d4e53;
+}
+
+/* Main Content */
+
+#main-doc {
+  position: absolute;
+  margin: 16px 0 110px 310px;
+  padding: 16px;
+  font-size: 15px;
+}
+
+#main-doc .main-section {
+  margin-bottom: 20px;
+  padding: 5px 10px;
+}
+
+#main-doc .main-section header {
+  font-size: 1.9em;
+  font-weight: thin;
+  margin-top: -10px;
+}
+
+#main-doc article {
+  padding: 10px 20px 0;
+}
+
+#main-doc article p {
+  margin-bottom: 12px;
+}
+
+#main-doc article ul {
+  margin-left: 56px;
+}
+
+#main-doc article li {
+  margin-bottom: 12px;
+}
+
+#main-doc article code {
+  display: block;
+  text-align: left;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 10px;
+  font-size: 13px;
+  line-height: 2;
+  white-space: pre-line;
+  word-break: normal;
+  word-wrap: normal;
+}
