--- a/css/styles.css
+++ b/css/styles.css
@@ -22,12 +22,12 @@ header {
   top: 0;
   left: 0;
   border-right-style: solid;
-  border-right-color: rgba(0, 22, 22, 0.4);;
+  border-right-color: rgba(0, 22, 22, 0.4);
 }
 
 #navbar header {
   text-align: center;
-  padding: 10px 10px  12px 10px ;
+  padding: 10px 10px 12px 10px;
   font-size: 1.8em;
   font-weight: thin;
 }
@@ -95,4 +95,33 @@ header {
   white-space: pre-line;
   word-break: normal;
   word-wrap: normal;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 768px) {
+  /* Navigation Menu */
+
+  #navbar {
+    width: 100%;
+    height: 38vh;
+    overflow: scroll;
+    position: static;
+    border-right-style: none;
+    border-bottom-style: solid;
+    border-bottom-color: black;
+  }
+
+  #navbar header {
+    position: sticky;
+    top: 0;
+    background-color: #ffffff;
+    border-bottom: 1px solid #4d4e53;
+  }
+
+  /* Main Content */
+
+  #main-doc {
+    margin: 0;
+  }
 }
