--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,29 @@ header {
   word-wrap: normal;
 }
 
+#main-doc .main-section:last-of-type article {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#main-doc article button {
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  background-color: #ffffff;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  margin: 0 20px 20px 0;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  transition: all 0.2s ease-in-out;
+}
+
+#main-doc article button:hover {
+  transform: scale(1.1);
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 768px) {
